# budget-service

./: Cargo.toml  README.md  config.yaml.example
migrations/: down.sql  up.sql
src/: config.rs  database.rs  error.rs  main.rs
src/controllers/: expenses.rs  incomes.rs  mod.rs  people.rs  savings.rs
src/models/: expense.rs  income.rs  mod.rs  person.rs  saving.rs
