[package]
name = "budget-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bigdecimal = { version = "0.3", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "any", "postgres", "bigdecimal"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.3"
